color name changes to match figma scheme

--- a/stream-chat-android-ui-components-sample/src/main/res/layout/chat_info_members_separator_item.xml
+++ b/stream-chat-android-ui-components-sample/src/main/res/layout/chat_info_members_separator_item.xml
@@ -8,13 +8,12 @@
     android:background="@drawable/stream_ui_selectable_item_background_white"
     android:clickable="true"
     android:drawablePadding="16dp"
+    app:drawableTint="@color/stream_ui_grey"
     android:focusable="true"
     android:gravity="start|center_vertical"
     android:paddingStart="18dp"
     android:singleLine="true"
-    android:textColor="@color/stream_ui_boulder"
+    android:textColor="@color/stream_ui_grey"
     android:textSize="@dimen/stream_ui_text_medium"
     app:drawableStartCompat="@drawable/ic_icon_down"
-    app:drawableTint="@color/stream_ui_boulder"
-    tools:text="10 more"
-    />
+    tools:text="10 more" />
