--- a/stream-chat-android-ui-components/src/main/res/layout/stream_ui_item_attachment_media.xml
+++ b/stream-chat-android-ui-components/src/main/res/layout/stream_ui_item_attachment_media.xml
@@ -24,13 +24,14 @@
         android:id="@+id/selectionOverlayView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/stream_ui_attachment_dialog_selection_overlay"
+        android:background="@color/stream_ui_overlay"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/mediaThumbnailImageView"
         app:layout_constraintEnd_toEndOf="@id/mediaThumbnailImageView"
         app:layout_constraintStart_toStartOf="@id/mediaThumbnailImageView"
         app:layout_constraintTop_toTopOf="@id/mediaThumbnailImageView"
         tools:ignore="ContentDescription"
+        tools:visibility="visible"
         />
 
     <ImageView
@@ -41,7 +42,7 @@
         android:background="@drawable/stream_ui_circle_white"
         android:scaleType="center"
         android:src="@drawable/stream_ui_ic_attachment_check"
-        app:tint="@color/stream_ui_icon_strong_tint"
+        app:tint="@color/stream_ui_white"
         app:layout_constraintEnd_toEndOf="@id/mediaThumbnailImageView"
         app:layout_constraintTop_toTopOf="@id/mediaThumbnailImageView"
         tools:ignore="ContentDescription"
