--- a/stream-chat-android-ui-components/src/main/res/layout/stream_ui_item_message_plain_text_with_file_attachments.xml
+++ b/stream-chat-android-ui-components/src/main/res/layout/stream_ui_item_message_plain_text_with_file_attachments.xml
@@ -152,7 +152,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/messageContainer"
         app:layout_constraintEnd_toEndOf="@+id/marginEnd"
-        app:tint="@color/stream_ui_light_red"
+        app:tint="@color/stream_ui_red"
         tools:ignore="ContentDescription"
         tools:visibility="visible"
         />
